# http_setup

./: .gitignore  Cargo.toml  Makefile  README.md  eslint.config.js  jarmuz-release.mjs  jarmuz-watch.mjs  package-lock.json  package.json  tsconfig.json
jarmuz/: job-esbuild.mjs  run-website.mjs  worker-server-dev.mjs  worker-server-prod.mjs
resources/css/: _fonts.css  _reset.css  _root.css  _variables.css  website.css
resources/manifest/: manifest.json
resources/ts/: index.tsx
resources/ts/components/: App.tsx  AppLayout.module.css  AppLayout.module.css.d.ts  AppLayout.tsx  ContentLayout.module.css  ContentLayout.module.css.d.ts  ContentLayout.tsx  Home.tsx
resources/ts/workers/: serviceWorker.ts
src/: main.rs
src/server/: mod.rs
src/server/http_api/: favicon.rs  home.rs  manifest.rs  mod.rs  statics.rs
src/utils/: mod.rs  resolve_socket_addr.rs
templates/: index.html
