[package]
name = "serve"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
actix-web = "4"
askama = "0.14.0"
esbuild-metafile = "0.5.0"
rust-embed = "8.7.2"
mime_guess = "2.0.5"
